[package]
name = "rcgal"
version = "0.2.3-dev"
edition = "2024"
authors = ["Ondřej Toman <ondra007.tom@seznam.cz>"]
description = "Rust Computational Geometry Algorithms Library"
categories = ["algorithms", "mathematics", "science", "graphics"]
keywords = ["math", "geometry", "2d", "3d"]
repository = "https://github.com/kitt159/rcgal"
documentation = "https://docs.rs/rcgal"
license = "LGPL-2.1+"

[dev-dependencies]
approx = "0.5.1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
use_self = "warn"

[dependencies]
nalgebra = "0.34.0"
